# PyTorusThreePoints

./: .gitignore  README.md  pyproject.toml
docs/: conf.py  index.rst
docs/_html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_html/.doctrees/: environment.pickle  index.doctree
docs/_html/_static/: documentation_options.js
examples/: CliffordCircles.py  NestedCliffordCircles.py  TwistedAstroidalClifford.py  TwistedAstroidalClifford_animation.py  VillarceauCircles.py  example1.py  example2.py  example3.py  example4.py  example5.py  example6.py
tests/: test_torus_three_points.py
torus_three_points/: main.py
